// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _accessKey="V" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <div slot="input">
        <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _alert=true 1`] = `
<kol-input-date _alert="" _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _disabled=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" disabled="" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _hint="Hint" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-date _hide-error="" _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _readOnly=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _readonly="" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" readonly="" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _shortKey="S" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="date">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _touched=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _touched="" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" class="has-value kol-input-date">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="date">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <div slot="input">
        <input autocapitalize="off" autocomplete="off" autocorrect="off" id="id-nonce" max="9999-12-31" name="field" type="date" value="2025-01-01">
      </div>
    </kol-input>
  </template>
</kol-input-date>
`;
